# freETarget

Software/ESP32/: ESP32 - Shortcut.lnk
Software/ESP32/blink/blink - Copy/main/: blink_example_main.c
Software/ESP32/blink/blink/main/: blink_example_main.c
Software/ESP32/echo/uart_echo/: sdkconfig  sdkconfig.old
Software/ESP32/echo/uart_echo/main/: uart_echo_example_main.c
Software/ESP32/freeETarget/: sdkconfig
Software/ESP32/freeETarget/main/: CMakeLists.txt  WiFi.c  WiFi.h  ZZZZ_tcp_server.c  analog_io.c  analog_io.h  analog_io.ino  compute_hit.c  compute_hit.h  dac.c  dac.h  diag_tools.c  diag_tools.h  freETarget.c  freETarget.h  gpio.c  gpio.h  gpio_define.c  gpio_define.h  i2c.c  i2c.h  json.c  json.h  main.c  mfs.c  nonvol.c  nonvol.h  pcnt.c  pcnt.h  pwm.c  pwm.h  serial_io.c  serial_io.h  speed_of_sound.c  timer.c  timer.h  token.c  token.h
Software/ESP32/main/: WiFi.c  analog_io.c  compute_hit.c  diag_tools.c  diag_tools.h  freETarget.c  freETarget.h  gpio.c  gpio.h  gpio_define.c  gpio_define.h  json.c  main.c  mfs.c  mfs.h  nonvol.c  pcnt.c  serial_io.c  timer.c  token.c
Software/ESP32/tcp_server/: sdkconfig  sdkconfig.old
Software/ESP32/tcp_server/main/: CMakeLists.txt  analog_io.c  analog_io.ino  compute_hit.c  compute_hit.h  dac.c  diag_tools.c  diag_tools.h  esp-01.c  esp-01.h  freETarget.c  freETarget.h  gpio.c  gpio.h  gpio_define.c  gpio_define.h  hellpers.h  i2c.c  json.c  json.h  nonvol.c  nonvol.h  pcnt.c  pcnt.h  pwm.c  serial_io.c  serial_io.h  speed_of_sound.c  tcp_server.c  timer.c  timer.h  token.c
