idf_component_register(SRCS "main.c" "dac.c" "pcnt.c"
                    "freETarget.c"
                    "diag_tools.c"
                    "token.c"
                    "nonvol.c"
                    "json.c"
                    "analog_io.c"
                    "gpio.c"
                    "compute_hit.c"
                    "speed_of_sound.c"
                    "serial_io.c"
                    "gpio_define.c"
                    "timer.c"
                    "pwm.c"
                    "pcnt.c"
                    "i2c.c"
                    INCLUDE_DIRS ".")
