idf_component_register(SRCS "tcp_server.c"
                    "freETarget.c"
                    "diag_tools.c"
                    "token.c"
                    "nonvol.c"
                    "json.c"
                    "analog_io.c"
                    "gpio.c"
                    INCLUDE_DIRS ".")
