idf_component_register(SRCS "tcp_server.c"
                    "freETarget.c"
                    "diag_tools.c"
                    "token.c"
                    "nonvol.c"
                    "json.c"
                    "analog_io.c"
                    "gpio.c"
                    "compute_hit.c"
                    "speed_of_sound.c"
                    "serial_io.c"
                    "gpio_define.c"
                    "timer.c"
                    INCLUDE_DIRS ".")
